# rd-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
config/: open-source-release.yaml  professionalism-baseline.yaml  professionalism-release-review.yaml  skill-content-exceptions.yaml
docs/: BENCHMARKS.md  COMPARISON.md  ENGINEERING_STAGE_MODEL.md  HOOKS.md  INSTALLATION.md  LICENSE_DECISION.md  MARKETPLACE.md  MARKETPLACE_CATALOG.md  OPEN_SOURCE_READINESS.md  OPERATING_MODEL.md  PACKAGING.md  PROFESSIONALISM_ENHANCEMENT_MATRIX.md  PROFESSIONALISM_ENHANCEMENT_STANDARD.md  PROFESSIONALISM_RELEASE_CHECKLIST.md  QUALITY_MODEL.md  QUICKSTART.md  README.md  RELEASE.md  ROUTING_EXAMPLES.md  RUNTIME_PROFILES.md  SCORECARD.md  SCORECARD_DASHBOARD.md  SHOWCASE.md  SKILL_CONTENT_GOVERNANCE.md  TELEMETRY.md  USAGE.md  VALIDATION.md
examples/: README.md
installers/: changeforge_install.py  doctor.py  install.py  uninstall.py  upgrade.py
reports/: README.md  activation-precision.json  activation-precision.md  codex-live-benchmark-summary.json  codex-live-benchmark-summary.md  codex-live-smoke-summary.json  codex-live-smoke-summary.md  context-control-plane-eval.json  context-control-plane-eval.md  core99-ablation-release-report-20260625.md  executor-adapter-eval.json  executor-adapter-eval.md  hook-validation.json  hook-validation.md  installation-validation.json  installation-validation.md  live-benchmark-p0-p1-fix-notes.md  professional-agent-samples-report.json  professional-agent-samples-report.md  professional-benchmarks-eval.json  professional-benchmarks-eval.md  professional-benchmarks-report.json  professional-benchmarks-report.md  professional-coverage-matrix.json  professional-coverage-matrix.md  professional-routing-coverage.json  professional-routing-coverage.md  professional-scorecard.json  professional-scorecard.md  professionalism-coverage.json  professionalism-coverage.md  professionalism-regression-report.json  professionalism-regression-report.md  professionalism-release-readiness.json  professionalism-release-readiness.md  (+9 more)
(+2360 files in other folders)
