[project]
name = "change-forge-skill-mesh"
version = "0.1.0"
description = "Authoring, validation, build, packaging, and installation tools for ChangeForge professional skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "agent-skills",
  "change-management",
  "developer-tools",
  "quality-gates",
  "skill-authoring",
]
authors = [
  { name = "ChangeForge" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/machenjie/rd-skills"
Documentation = "https://github.com/machenjie/rd-skills/tree/master/docs"
Issues = "https://github.com/machenjie/rd-skills/issues"
Source = "https://github.com/machenjie/rd-skills"

[tool.changeforge]
repository_kind = "skill-authoring"
runtime_source = "dist"
install_src_directly = false
personal_asset_mapping = false

[tool.changeforge.profiles]
recommended = "Professional skills with compiled foundation references."
full = "Professional skills plus eligible domain extensions."
dev = "Authoring profile with development visibility into foundation capabilities."
